fix up user card and truncate overflow

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -179,3 +179,9 @@ and (min-device-width: 1224px) {
   margin-bottom: 30px;
 }
 
+.card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
